Version 0.6.0
-------------
New feature: Settings are now synced to and from your Google account, if you enabled sync in Chrome.
Improvement: one-click support for binsearch.info

Version 0.5.22
--------------
Improvement: Better looking icons, in particular in the action bar
Improvement: Ability to pause for X minutes (thanks jsterken)
Improvement: Code improvement on how domain and protocol are handled, when sending a link to SAB. Solves part of the NZBClub problem. (thanks jsterken)
Bugfix: SAB icon would not change to the red error icons, when an error occurred when sending a link to SAB. (thanks jsterken)
Bugfix: Newznab providers: when a cover has multiple releases, send the correct URL to SAB (was always sending the 1st release URL) (thanks jsterken)

Version 0.5.21
--------------
Bugfix: Newznab sites: select all checkbox would break the 'Send to SAB' top button
Improved fanzub support (thanks Benni-chan)
Added support for nzbx.co (thanks sharkuw)

Version 0.5.20
--------------
Shorter notifications timeout available (1, 2, 3, 5 seconds)
Bugfix: right-click "Send link to SAB" never worked. Now it should work, at least on sites that don't require a login to download NZBs.
Bugfix: support for arbitrary Newznab providers setting wasn't saved correctly.

Version 0.5.19
--------------
Added support for arbitrary Newznab providers.
Newznab (nzbs.org, etc.): Added 1-click button in Cover view
Removed NZBMatrix & Newzbin settings (sites are gone).

Version 0.5.18
--------------
Better nzb.su implementation (thanks Benni-chan)
Removed NZBMatrix & Newzbin support (sites are gone)

Version 0.5.17
--------------
Bugfix: popup was broken when an item was paused. (thanks eegeeZA)
Bugfix: Fixed download button on dognzb.cr (thanks VTWoods)

Version 0.5.16
--------------
Bugfix: Remove unneeded labels on graph

Version 0.5.15
--------------
More NZBRus fixes
Fix for missing notification icon

Version 0.5.14
--------------